[package]
name = "microseh"
version = "1.0.1"
authors = ["sonodima"]
edition = "2021"

description = "Structured Exception Handling (SEH) for Rust"
readme = "README.md"
homepage = "https://github.com/sonodima/microseh"
repository = "https://github.com/sonodima/microseh"
license = "MIT"

keywords = ["seh", "windows", "hardware", "exception", "handler"]
categories = ["os"]


[build-dependencies]
cc = "1.0"

[features]
default = ["std"]
std = []
